# test-dns

./: .dockerignore  .env.local.example  .gitignore  .gitlab-ci.yml  .log4brains.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Caddyfile  Dockerfile  Dockerfile.docs  README.md  eslint.config.mjs  mkdocs.yml  next.config.ts  package-lock.json  package.json  pyproject.toml  vitest.config.ts  zarf.yaml
.claude/: settings.json
capabilities/: INDEX.md
capability-dashboard-live/: README.md  app.js  index.html  styles.css
config/: users.local.json.example
docs/: CONFLUENCE-EXPORT-GUIDE.md  DEFINITION-OF-DONE-FEATURE.md  DEPLOYMENT-ONPREM-KUBERNETES.md  DOCUMENTATION-GUIDE.md  ID-UND-BENENNUNGSREGELN.md  MCP-DNS-CRUD.md  PRD.md  QUICK-GUIDE-FEATURE-UND-REQUIREMENT.md  QUICK-GUIDE-TESTING.md  README.md  SVC.md  architecture.md  argocd.md  configuration.md  offline-install.md  operations.md  quickstart.md  release-process.md  testing.md  zarf.md
features/: INDEX.md  OBJ-1-capabilities-dashboard.md  OBJ-1-cicd-pipeline.md  OBJ-10-kubernetes-deployment.md  OBJ-11-monitoring-observability.md  OBJ-12-security-authentifizierung.md  OBJ-13-kubernetes-operator.md  OBJ-14-release-management.md  OBJ-15-produkt-website.md  OBJ-16-maturitaetsstatus.md  OBJ-17-sbom-security-scanning.md  OBJ-18-artefakt-registry.md  OBJ-19-zarf-paket-offline-weitergabe.md  OBJ-2-dokumentation.md  OBJ-2-participant-configuration-form.md  OBJ-20-zielumgebung-import-rehydrierung.md  OBJ-21-gitops-argocd.md  OBJ-22-release-artefaktpruefung-publish-gate.md  OBJ-23-test-execution-dashboard.md  OBJ-3-rest-api.md  (+17 more)
(+896 files in other folders)
