[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dns-tool-tests"
version = "0.1.0"
description = "Automatische DNS-Tests fuer FMN Mission Networks"
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "dnspython>=2.6",
  "pytest-html>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/auto"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
  "req: Verknuepfung zu einem Requirement (SREQ-xxx oder CREQ-xxx)",
  "manual: Manueller Test, nicht automatisch ausfuehren",
  "slow: Test dauert laenger als 30 Sekunden",
]
addopts = [
  "--tb=short",
  "--strict-markers",
]

[tool.pytest.ini_options.html]
report = "docs/pytest-report.html"
self-contained-html = true
